@@ -3,15 +3,15 @@ services:
   - MySQL
   - PostgreSQL
 python:
-  - "2.6"
   - "2.7"
+  - "3.2"
 env:
 #  - DJANGO="Django==1.4.3" DBENGINE=sqlite
   - DJANGO="Django==1.4.5" DBENGINE=mysql
   - DJANGO="Django==1.4.5" DBENGINE=pg
 #  - DJANGO=https://www.djangoproject.com/download/1.5c1/tarball/ DBENGINE=mysql
-  - DJANGO=https://www.djangoproject.com/download/1.5c1/tarball/ DBENGINE=pg
-  - DJANGO=https://www.djangoproject.com/download/1.5c1/tarball/ DBENGINE=sqlite
+  - DJANGO=https://www.djangoproject.com/download/1.5.1/tarball/ DBENGINE=pg
+  - DJANGO=https://www.djangoproject.com/download/1.5.1/tarball/ DBENGINE=sqlite
 install:
   - sh -c "if [ '$DBENGINE' = 'pg' ]; then pip install -q psycopg2; fi"
   - sh -c "if [ '$DBENGINE' = 'mysql' ]; then pip install -q MySQL-python; fi"
