@@ -1,34 +1,27 @@
 [tox]
 envlist =
-    dj14, dj15, py3dj15
+    d14, d15, p3d15
 
 [testenv]
 changedir=tests
 commands =
-    pip install mock
     django-admin.py test concurrency --settings concurrency.tests.settings --failfast --traceback
 
-setenv =
-    PYTHONPATH = /data/VENV/LIB/django/$DJANGOVERSION:$PYTHONPATH
-
-[testenv:dj14]
+[testenv:d14]
 basepython = python2.7
-setenv =
-    DJANGOVERSION = 1.4.5
 deps =
+    django==1.4.5
     -r{toxinidir}/requirements.pip
 
-[testenv:dj15]
+[testenv:d15]
 basepython = python2.7
-setenv =
-    DJANGOVERSION = 1.5c1
 deps =
+    django==1.5.1
     -r{toxinidir}/requirements.pip
 
 
-[testenv:py3dj15]
+[testenv:p3d15]
 basepython = python3.2
-setenv =
-    DJANGOVERSION = 1.5c1
 deps =
+    django==1.5.1
     -r{toxinidir}/requirements.pip
